[bumpversion]
current_version = 0.6.0
commit = True
tag = True

[metadata]
name = wagtail-turnstile
version = 0.3.1
description = Cloudflare Turnstile integration for Wagtail forms
long_description = file: README.md
long_description_content_type = text/markdown
author = Mark Steadman
url = https://github.com/soundslocalcic/wagtail-turnstile
license = MIT
classifiers = 
	Development Status :: 3 - Alpha
	Framework :: Django
	Framework :: Wagtail
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Topic :: Internet :: WWW/HTTP

[options]
packages = find:
include_package_data = true
python_requires = >=3.8
install_requires = 
	Django>=3.2
	wagtail>=3.0
	requests>=2.0

[options.packages.find]
exclude = 
	tests
	testproject

[bumpversion:file:turnstile/__init__.py]
